--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -17,8 +17,8 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
-  schedule:
-    - cron: '0 17 * * *'
+  # schedule:
+  #   - cron: '0 17 * * *'
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
@@ -27,7 +27,7 @@ env:
   CONFIG_FILE: router_config/.config
   DIY_P1_SH: router_config/diy-part1.sh
   DIY_P2_SH: router_config/diy-part2.sh
-  UPLOAD_BIN_DIR: false
+  UPLOAD_BIN_DIR: true
   UPLOAD_ARMVIRT: false
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
@@ -199,7 +199,7 @@ jobs:
         body: |
           This is OpenWrt firmware for Amlogic S9xxx STB
           * Firmware information
-          Default IP: 192.168.1.1
+          Default IP: 192.168.1.2
           Default username: root
           Default password: password
           Default WIFI name: OpenWrt
